Add first visit functionality and updated swagger
